5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_2704.log
== TEST (2019-04-11 16:15:40) 
-- CODE:
#Leitura da nota do aluno
nota = float(input("Digite a nota do aluno: "))
bonus = input("O aluno vai receber bonificacao? ")

#Calculo da nota:
if (bonus == S):
	nf = nota * 1.10
	print(nf)
else: 
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (bonus == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:16:25) 
-- CODE:
#Leitura da nota do aluno
nota = float(input("Digite a nota do aluno: "))
bonus = input("O aluno vai receber bonificacao? ")

#Calculo da nota:
if (bonus == "S"):
	nf = nota * 1.10
	print(nf)
else: 
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:16:38) 
-- CODE:
#Leitura da nota do aluno
nota = float(input("Digite a nota do aluno: "))
bonus = input("O aluno vai receber bonificacao? ")

#Calculo da nota:
if (bonus == "S"):
	nf = nota * 1.10
	print(nf)
else: 
	print(nota)
-- EXECUTION TIME:
0.238466
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
